Bizfi Production/src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>McaApp__Avg_Number_Bank_Deposits__c</fullName>
        <inlineHelpText>The average number of monthly bank deposits.</inlineHelpText>
        <label># Deposits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>McaApp__Balance__c</fullName>
        <label>Cash Advance Company Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>McaApp__Balance_amt__c</fullName>
        <formula>McaApp__Payback_Amount__c  -  McaApp__Total_Merchant_Payment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>@Depcrecated Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>McaApp__Bank_ID__c</fullName>
        <formula>McaApp__Bank_Name__r.Id</formula>
        <inlineHelpText>This shows the ID of the Bank Name</inlineHelpText>
        <label>Bank ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>McaApp__Bank_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Bank, ISO, Vendor</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>McaApp__Bank_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Program</label>
        <referenceTo>McaApp__Program__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>McaApp__Bank_Statements__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bank Statements</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>McaApp__Bank_Stmt__c</fullName>
        <formula>Account.McaApp__Number_Bank_Statements_Available__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># Bank Stmt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>McaApp__Batches__c</fullName>
        <description>Roll up Credit Card Batches according to month and year</description>
        <label># Batches</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>McaApp__Branch__c</fullName>
        <formula>If( McaApp__Funding_Amount__c &gt;60000,&quot;Manhattan&quot;, 
If( McaApp__Funding_Amount__c &gt;50000,&quot;Connecticut&quot;,
If( McaApp__Funding_Amount__c &gt;25000,&quot;Long Island&quot;,
If( McaApp__Funding_Amount__c &gt;1000,&quot;New Jersey&quot;
,&quot;Manhattan&quot;))))</formula>
        <inlineHelpText>This is for Demo purposes only</inlineHelpText>
        <label>Branch</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>McaApp__Buy_Rate__c</fullName>
        <label>Buy Rate</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>McaApp__Cash_Advance_Company__c</fullName>
        <label>Cash Advance Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>McaApp__Checklist_Notes__c</fullName>
        <label>Checklist Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>McaApp__Chosen_Offer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Chosen Offer</label>
        <referenceTo>McaApp__Offer__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>McaApp__Closed_Lost_Date_Time__c</fullName>
        <label>Closed Lost Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>McaApp__Closed_Lost__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Closed Lost</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>McaApp__Closed_Stip_Count__c</fullName>
        <description>COUNT of Closed Stips</description>
        <label>Closed Stips</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>McaApp__Closed_Stips__c</fullName>
        <description>Count the number of stips related to opportunity having status = Cancelled</description>
        <label>Closed Stips</label>
        <summaryFilterItems>
            <field>McaApp__Stips__c.McaApp__Status__c</field>
            <operation>equals</operation>
            <value>Completed, Cancelled</value>
        </summaryFilterItems>
        <summaryForeignKey>McaApp__Stips__c.McaApp__Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>McaApp__Closer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Closer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>McaApp__Closing_Cost_Status__c</fullName>
        <label>Closing Cost - Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>McaApp__Closing_Cost__c</fullName>
        <label>Closing Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>McaApp__Collection_Type__c</fullName>
        <label>Collection Type</label>
        <picklist>
            <picklistValues>
                <fullName>Split</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lockbox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACH</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>McaApp__Collector__c</fullName>
        <label>Collector</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>McaApp__Commission_Engine_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field determine weather payables will be calculated based on Advance commission engine.</description>
        <inlineHelpText>When unchecked,payables will be calculated based on Advance commission engine.</inlineHelpText>
        <label>Commission Engine Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>McaApp__Commission_Percentage__c</fullName>
        <label>Commission %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>McaApp__Commission__c</fullName>
        <label>Commission</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>McaApp__Commissions_Payable_External__c</fullName>
        <label>Commissions Payable - External</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>McaApp__Commissions_Payable_Internal__c</fullName>
        <label>Commissions Payable - Internal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>McaApp__Contact_Roles__c</fullName>
        <label>Contact Roles</label>
        <picklist>
            <picklistValues>
                <fullName>Business Owner</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Business User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decision Maker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Economic Buyer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Economic Decision Maker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evaluator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive Sponsor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Influencer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Buyer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>McaApp__Contract_Auto_number_value__c</fullName>
        <label>Contract Auto number value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>McaApp__Contract_Requested_Date__c</fullName>
        <label>Agreement Requested Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>McaApp__Contract_Requested_This_Month__c</fullName>
        <formula>and(MONTH( McaApp__Contract_Requested_Date__c ) = MONTH(TODAY()) , YEAR( McaApp__Contract_Requested_Date__c ) = YEAR(TODAY()))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Requested This Month</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>McaApp__Contract_Requested_This_Week__c</fullName>
        <formula>MOD(TODAY() - DATE(1900, 1, 7), 7) &gt;= MOD(  McaApp__Contract_Requested_Date__c  - DATE(1900, 1, 7), 7) &amp;&amp; 
TODAY() -   McaApp__Contract_Requested_Date__c  &lt; 7</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Requested This Week</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>McaApp__Contract_Requested_Today__c</fullName>
        <formula>AND( McaApp__Contract_Requested_Date__c  =  TODAY() )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Requested Today</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>McaApp__Contract_Signed_This_Month__c</fullName>
        <formula>and(MONTH( McaApp__Date_Contract_Signed__c ) = MONTH(TODAY()) , YEAR( McaApp__Date_Contract_Signed__c ) = YEAR(TODAY()))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Signed This Month</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>McaApp__Contract_Signed_This_Week__c</fullName>
        <formula>MOD(TODAY() - DATE(1900, 1, 7), 7) &gt;= MOD(  McaApp__Date_Contract_Signed__c - DATE(1900,1,7), 7) &amp;&amp; TODAY() -  McaApp__Date_Contract_Signed__c &lt; 7</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Signed This Week</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>McaApp__Contract_Signed_Today__c</fullName>
        <formula>AND( McaApp__Date_Contract_Signed__c  =  TODAY() )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Signed Today</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>McaApp__Contract_Signed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Agreement Signed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>McaApp__CountAttachment__c</fullName>
        <label>CountAttachment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>McaApp__Created_Upon_Convert__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This indicates that the opportunity was created upon lead conversion.</inlineHelpText>
        <label>Created Upon Convert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>McaApp__Credit_Card_Sales__c</fullName>
        <label>Monthly Credit Card Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>McaApp__Credit_Card_Statements__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Credit Card Statements</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>McaApp__Credit_Card_Stmts__c</fullName>
        <formula>Account.McaApp__Number_CC_Statements_Available__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># Credit Card Stmts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>McaApp__Credit_Score__c</fullName>
        <label>Owner 1 Credit Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>McaApp__CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>McaApp__Current_Balance_Date__c</fullName>
        <label>Current Balance Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>McaApp__Current_Balance__c</fullName>
        <label>Current Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>McaApp__Current_Max_Funding_Amt__c</fullName>
        <label>Current Max Funding Amt.</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>McaApp__Date_Contract_Signed__c</fullName>
        <label>Agreement Signed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>McaApp__Date_Funded__c</fullName>
        <label>Funded Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>McaApp__Days_in_Current_Stage__c</fullName>
        <formula>NOW()  -  McaApp__Last_Stage_Change_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days in Current Stage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>McaApp__Days_lead_to_funding__c</fullName>
        <label>Days lead to funding</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>McaApp__Deal_Entry_Wizard_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Keeps the check of whether user has entered the Deal Entry Wizard?</description>
        <label>Deal Entry Wizard Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>McaApp__Deal_Type__c</fullName>
        <label>Deal Type</label>
        <picklist>
            <picklistValues>
                <fullName>MCA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium Term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Line of Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoice Financing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>McaApp__Declined_Date_Time__c</fullName>
        <label>Declined Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>McaApp__Declined__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Declined</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>McaApp__DeliveryInstallationStatus__c</fullName>
        <label>Delivery/Installation Status</label>
        <picklist>
            <picklistValues>
                <fullName>In progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yet to begin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>McaApp__Display_on_Renewal_Management__c</fullName>
        <formula>IF(
McaApp__Remove_from_Renewal_Management__c = true, false,
IF(
AND(
OR(
ISPICKVAL(StageName,&quot;Funded&quot;),
McaApp__Funded__c = true,
NOT(ISBLANK(McaApp__Date_Funded__c ))
),
NOT(OR(
ISPICKVAL(McaApp__Next_Opportunity__r.StageName ,&quot;Funded&quot;),
McaApp__Next_Opportunity__r.McaApp__Funded__c = true,
NOT(ISBLANK(McaApp__Next_Opportunity__r.McaApp__Date_Funded__c )))
)),
true,false))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Display on Renewal Management</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>McaApp__Driver_License__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Driver License</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>McaApp__Email_Open_Stips__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, will send an Email to Merchant with Open Stip details</inlineHelpText>
        <label>Email Open Stips</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>McaApp__Email__c</fullName>
        <formula>Account.McaApp__Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>McaApp__Estimated_Renewal_Date__c</fullName>
        <label>Estimated Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>McaApp__Ever_used_a_Business_Cash_Advance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ever used a Business Cash Advance?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>McaApp__Factor_Rate__c</fullName>
        <label>Factor Rate</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>McaApp__FundedStage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FundedStage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>McaApp__Funded_Date_Time__c</fullName>
        <label>Funded Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>McaApp__Funded_Notes__c</fullName>
        <label>Funding Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>McaApp__Funded_Payback__c</fullName>
        <label>Funded/Payback</label>
        <picklist>
            <picklistValues>
                <fullName>Funded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payback</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>McaApp__Funded_This_Month__c</fullName>
        <formula>AND( MONTH(McaApp__Date_Funded__c)  =  MONTH(TODAY()),  YEAR(McaApp__Date_Funded__c)  = YEAR(TODAY()) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Funded This Month</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>McaApp__Funded_This_Week__c</fullName>
        <formula>MOD(TODAY() - DATE(1900, 1, 7), 7) &gt;= MOD(  McaApp__Date_Funded__c 
- DATE(1900, 1, 7), 7) &amp;&amp;
TODAY() -  McaApp__Date_Funded__c &lt; 7</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Funded This Week</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>McaApp__Funded_Today__c</fullName>
        <formula>AND( McaApp__Date_Funded__c  =  TODAY() )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Funded Today</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>McaApp__Funded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Funded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>McaApp__Funding_Amount__c</fullName>
        <label>Funded $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>McaApp__Generic_Search__c</fullName>
        <formula>Name + McaApp__Bank_Name__r.Name+ Text(McaApp__Next_Opportunity__r.StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Generic Search</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>McaApp__Gross_monthly_Sales__c</fullName>
        <label>Gross Monthly Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>McaApp__Holdback_Percentage__c</fullName>
        <label>Holdback %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>McaApp__ISO_Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ISO Sales Rep</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (ISO Sales Rep)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>McaApp__ISO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>ISO that has submitted the deal</inlineHelpText>
        <label>ISO</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (ISO)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>McaApp__Last_Stage_Change_Date__c</fullName>
        <description>updates when stage changes</description>
        <inlineHelpText>Date of when the Opportunity entered the current Stage.</inlineHelpText>
        <label>Stage Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>McaApp__Lead_Created_Date__c</fullName>
        <inlineHelpText>This is copied from the lead Created Date</inlineHelpText>
        <label>Lead Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>McaApp__Lead_Score_at_Conversion__c</fullName>
        <label>Lead Score at Conversion</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>McaApp__Longest_Term__c</fullName>
        <label>Longest Term</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>McaApp__Lowest_Factor_Rate__c</fullName>
        <label>Lowest Factor Rate</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>McaApp__MainCompetitors__c</fullName>
        <label>Main Competitor(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>McaApp__MapFromLeadDescription__c</fullName>
        <label>MapFromLeadDescription</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>McaApp__Markup__c</fullName>
        <formula>(McaApp__Payback_Amount__c   - McaApp__Funding_Amount__c) / McaApp__Funding_Amount__c</formula>
        <label>Markup%</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>McaApp__Merchant__c</fullName>
        <label>Merchant #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>McaApp__Min_Monthly_Deposits__c</fullName>
        <label>Monthly Deposits</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>McaApp__Months_Since_Funding__c</fullName>
        <formula>(today() - IF( OR(ISNULL(McaApp__Date_Funded__c), ISBLANK(McaApp__Date_Funded__c) ) , today(), McaApp__Date_Funded__c) ) / 30</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Months Since Funding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>McaApp__NDBs_avg__c</fullName>
        <inlineHelpText>Average of Bank Account NDBs</inlineHelpText>
        <label># NDBs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>McaApp__NSFs_avg__c</fullName>
        <inlineHelpText>Average of Bank Account NSFs</inlineHelpText>
        <label># NSFs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>McaApp__Net_Funded_Amount__c</fullName>
        <formula>McaApp__Funding_Amount__c   -  McaApp__Payoff_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Funded $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>McaApp__NewInsert__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NewInsert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>McaApp__Next_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Next Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunities (Next Opportunity)</relationshipLabel>
        <relationshipName>Next_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>McaApp__Next_Step_Due_Date__c</fullName>
        <inlineHelpText>This shows the date that the next step is due</inlineHelpText>
        <label>Next Step Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>McaApp__Next_Step_Value__c</fullName>
        <description>This field is use to map value of next step picklist field from Lead and will be use in workflow to send email alert</description>
        <label>Next Step Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>McaApp__No_Bank_Statements__c</fullName>
        <label># Bank Statements</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>McaApp__No_Credit_Card_Statements__c</fullName>
        <label># Credit Card Statements</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>McaApp__No_of_Funders__c</fullName>
        <label># of Funders</label>
        <summaryForeignKey>McaApp__Loan_Balance__c.McaApp__Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>McaApp__No_of_Submission__c</fullName>
        <label># of Submission</label>
        <summaryForeignKey>McaApp__Submission__c.McaApp__Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>McaApp__No_of_offers__c</fullName>
        <label>No. of offers</label>
        <summaryForeignKey>McaApp__Offer__c.McaApp__Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>McaApp__Number_of_Funders__c</fullName>
        <description>COUNT of Loan Balance</description>
        <label># of Funders</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>McaApp__Number_of_Submission__c</fullName>
        <description>COUNT of Submissions</description>
        <label># of Submissions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>McaApp__Number_of_offers__c</fullName>
        <description>Count of Offers</description>
        <label># of Offers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>McaApp__OnDeck_Business_ID__c</fullName>
        <label>OnDeck Business ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>McaApp__Open_Stip_Count__c</fullName>
        <description>COUNT of Open Stips</description>
        <label>Open Stips</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>McaApp__Open_Stips__c</fullName>
        <label>Open Stips</label>
        <summaryFilterItems>
            <field>McaApp__Stips__c.McaApp__Status__c</field>
            <operation>notEqual</operation>
            <value>Completed, Cancelled</value>
        </summaryFilterItems>
        <summaryForeignKey>McaApp__Stips__c.McaApp__Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>McaApp__Opener__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Opener handling the Opportunity</description>
        <label>Opener</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>McaApp__OrderNumber__c</fullName>
        <label>Order Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>McaApp__Origination_Fee_Percentage__c</fullName>
        <label>Origination Fee %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>McaApp__Origination_Fee__c</fullName>
        <label>Origination Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>McaApp__Origination_Fees_Payable_External__c</fullName>
        <label>Origination Fees Payable - External</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>McaApp__Origination_Fees_Payable_Internal__c</fullName>
        <label>Origination Fees Payable - Internal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>McaApp__Owner_1_Ownership__c</fullName>
        <label>Owner 1 Ownership %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>McaApp__Owner_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner 1</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Contact.McaApp__Contact_Roles__c</field>
                <operation>equals</operation>
                <value>Business Owner</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>McaApp__Owner_2_Credit_Score__c</fullName>
        <label>Owner 2 Credit Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>McaApp__Owner_2_Ownership__c</fullName>
        <label>Owner 2 Ownership %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>McaApp__Owner_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner 2</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Contact.McaApp__Contact_Roles__c</field>
                <operation>equals</operation>
                <value>Business Owner</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Owner 2)</relationshipLabel>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>McaApp__PaidImage__c</fullName>
        <formula>IMAGE(&quot;/resource/McaApp__ColorImages/Images/green.png&quot;, &quot;green&quot;, 12, IF(ROUND(McaApp__Term_Completed__c, 1) != 0,(100 * McaApp__Term_Completed__c), 0))
&amp; IMAGE(&quot;/resource/McaApp__ColorImages/Images/yellow.jpg&quot;, &quot;yellow&quot;, 12, 100-(100 * McaApp__Term_Completed__c ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>..</label>
        <type>Text</type>
    </fields>
</CustomObject>